feat(backend): Add security in the aplication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,13 @@ spring.application.name=talkia_proyect
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/talkiaTPDB
 spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #No envia el trace al usuario cuando hay error.
 server.error.include-stacktrace=never
+
 #spring.jackson.date-format=yyyy-dd-MM
